2008-05-04  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Daniel Mustieles

2008-04-25  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Daniel Mustieles

2008-04-17  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Daniel Mustieles

2008-04-17  Claude Paroz  <claude@2xlibre.net>

	* fr.po: Updated French translation.

2008-04-13  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Daniel Mustieles

2008-03-28  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation by Daniel Mustieles

2008-03-14  Andre Klapper  <a9016009@gmx.de>

	* de.po: Updated German translation.

2008-03-14  Ilkka Tuohela <hile@iki.fi>

	* fi.po: Updated Finnish translation.

2008-02-19  Jorge Gonzalez  <jorgegonz@svn.gnome.org>

	* es.po: Updated Spanish translation

2008-02-19  Kjartan Maraas  <kmaraas@gnome.org>

	* POTFILES.in: Add missing files.
	* nb.po: Updated Norwegian bokmål translation.

2008-02-14  Pawan Chitrakar <chautari@gmail.com>

	* ne.po: Updated Nepali Translation.

2008-01-21  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* fr.po: Updated French translation by Christophe Benz and
	Stéphane Raimbault.
 
2008-01-20  Stéphane Raimbault  <stephane.raimbault@gmail.com>

	* POTFILES.in: Moved flowtablewithfields.cc to glom/mode_data from
	glom/utility_widgets.

2007-12-31  Yannig Marchegay <yannig@marchegay.org>

	* oc.po: Updated Occitan translation.
	
2007-12-30  Jorge Gonzalez  <jorgegonz@svn.gnome.org>  

	* es.po: Updated Spanish translation 

2007-12-11  Jorge Gonzalez  <jorgegonz@svn.gnome.org>  

        * es.po: Updated Spanish translation   

2007-12-08  Andre Klapper  <a9016009@gmx.de>

	* de.po: Update German translation.

2007-12-06  Jorge Gonzalez  <jorgegonz@svn.gnome.org>   

        * es.po: Updated Spanish translation   

2007-12-02  Murray Cumming  <murrayc@murrayc.com>
