@@ -1,18 +1,24 @@
 # List of source files containing translatable strings.
 # Please keep this file sorted alphabetically.
-glom.desktop.in.in
 glom/application.cc
 glom/base_db.cc
+glom/base_db_table_data.cc
+glom/base_db_table_data.cc
 glom/box_reports.cc
 glom/combobox_fields.cc
 glom/combobox_relationship.cc
+glom.desktop.in.in
 glom/dialog_connection.cc
 glom/dialog_database_preferences.cc
+glom/dialog_existing_or_new.cc
+glom/dialog_existing_or_new.cc
+glom/dialog_import_csv.cc
+glom/dialog_import_csv.cc
 glom/dialog_new_self_hosted_connection.cc
 glom/filechooser_export.cc
 glom/frame_glom.cc
-glom/glom.glade
 glom/glom_developer.glade
+glom/glom.glade
 glom/layout_item_dialogs/box_formatting.cc
 glom/layout_item_dialogs/combo_summarytype.cc
 glom/layout_item_dialogs/dialog_field_layout.cc
@@ -28,6 +34,8 @@ glom/libglom/data_structure/field.cc
 glom/libglom/data_structure/glomconversions.cc
 glom/libglom/data_structure/layout/layoutgroup.cc
 glom/libglom/data_structure/layout/layoutitem_button.cc
+glom/libglom/data_structure/layout/layoutitem_calendarportal.cc
+glom/libglom/data_structure/layout/layoutitem_calendarportal.cc
 glom/libglom/data_structure/layout/layoutitem_field.cc
 glom/libglom/data_structure/layout/layoutitem_image.cc
 glom/libglom/data_structure/layout/layoutitem_line.cc
@@ -47,13 +55,19 @@ glom/libglom/gst-package.c
 glom/libglom/spawn_with_feedback.cc
 glom/libglom/utils.cc
 glom/main.cc
-glom/mode_data/box_data.cc
 glom/mode_data/box_data_calendar_related.cc
+glom/mode_data/box_data.cc
 glom/mode_data/box_data_details.cc
 glom/mode_data/box_data_list.cc
 glom/mode_data/box_data_list_related.cc
+glom/mode_data/box_data_manyrecords.cc
+glom/mode_data/box_data_manyrecords.cc
+glom/mode_data/box_data_portal.cc
+glom/mode_data/box_data_portal.cc
 glom/mode_data/dialog_choose_field.cc
 glom/mode_data/dialog_choose_relationship.cc
+glom/mode_data/dialog_layout_calendar_related.cc
+glom/mode_data/dialog_layout_calendar_related.cc
 glom/mode_data/dialog_layout_details.cc
 glom/mode_data/dialog_layout_export.cc
 glom/mode_data/dialog_layout_list.cc
@@ -68,15 +82,15 @@ glom/mode_design/dialog_relationships.cc
 glom/mode_design/fields/box_db_table_definition.cc
 glom/mode_design/fields/dialog_fieldcalculation.cc
 glom/mode_design/fields/dialog_fielddefinition.cc
+glom/mode_design/print_layouts/box_print_layouts.cc
+glom/mode_design/print_layouts/canvas_layout_item.cc
+glom/mode_design/print_layouts/canvas_print_layout.cc
+glom/mode_design/print_layouts/window_print_layout_edit.cc
 glom/mode_design/script_library/dialog_new_script.cc
 glom/mode_design/script_library/dialog_script_library.cc
 glom/mode_design/users/dialog_groups_list.cc
 glom/mode_design/users/dialog_user.cc
 glom/mode_design/users/dialog_users_list.cc
-glom/mode_design/print_layouts/box_print_layouts.cc
-glom/mode_design/print_layouts/canvas_layout_item.cc
-glom/mode_design/print_layouts/canvas_print_layout.cc
-glom/mode_design/print_layouts/window_print_layout_edit.cc
 glom/mode_find/box_data_details_find.cc
 glom/mode_find/box_data_list_find.cc
 glom/mode_find/notebook_find.cc
@@ -93,8 +107,25 @@ glom/utility_widgets/comboentryglom.cc
 glom/utility_widgets/datawidget.cc
 glom/utility_widgets/db_adddel/db_adddel.cc
 glom/utility_widgets/dialog_choose_id.cc
+glom/utility_widgets/dragbar.cc
+glom/utility_widgets/dragbar.cc
+glom/utility_widgets/eggtoolpalette/eggenumaction.c
+glom/utility_widgets/eggtoolpalette/eggenumaction.c
+glom/utility_widgets/eggtoolpalette/eggtoolitemgroup.c
+glom/utility_widgets/eggtoolpalette/eggtoolitemgroup.c
+glom/utility_widgets/eggtoolpalette/eggtoolpalette.c
+glom/utility_widgets/eggtoolpalette/eggtoolpalette.c
+glom/utility_widgets/eggtoolpalette/testtoolpalette.c
+glom/utility_widgets/eggtoolpalette/testtoolpalette.c
 glom/utility_widgets/entryglom.cc
 glom/utility_widgets/filechooserdialog_saveextras.cc
 glom/utility_widgets/imageglom.cc
 glom/utility_widgets/layoutwidgetbase.cc
+glom/utility_widgets/layoutwidgetmenu.cc
+glom/utility_widgets/layoutwidgetmenu.cc
+glom/utility_widgets/layoutwidgetutils.cc
+glom/utility_widgets/layoutwidgetutils.cc
+glom/utility_widgets/notebooklabelglom.cc
+glom/utility_widgets/notebooklabelglom.cc
 glom/xsl_utils.cc
+
