@@ -1,3 +1,7 @@
+2008-05-09  Gabor Kelemen  <kelemeng@gnome.org>
+
+	* POTFILES.in: Updated, fix #530195
+
 2008-05-04  Jorge Gonzalez  <jorgegonz@svn.gnome.org>
 
 	* es.po: Updated Spanish translation by Daniel Mustieles
